it/snapshots/cli__completions_generate_zsh_script.snap
---
source: it/cli.rs
expression: output.stdout
---
#compdef pv

autoload -U is-at-least

_pv() {
    typeset -A opt_args
    typeset -a _arguments_options
    local ret=1

    if is-at-least 5.2; then
        _arguments_options=(-s -S -C)
    else
        _arguments_options=(-s -C)
    fi

    local context curcontext="$curcontext" state line
    _arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
'-V[Print version]' \
'--version[Print version]' \
":: :_pv_commands" \
"*::: :->pv" \
&& ret=0
    case $state in
    (pv)
        words=($line[1] "${words[@]}")
        (( CURRENT += 1 ))
        curcontext="${curcontext%:*:*}:pv-command-$line[1]:"
        case $line[1] in
            (env)
_arguments "${_arguments_options[@]}" : \
'--shell=[Shell syntax to generate]:SHELL:(bash fish zsh)' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(completions)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
':shell -- Shell to generate completions for:(bash fish zsh)' \
&& ret=0
;;
(setup)
_arguments "${_arguments_options[@]}" : \
'--yes[Accept PV-owned setup confirmations]' \
'--non-interactive[Disable interactive prompts]' \
'--no-path[Skip shell profile integration]' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(uninstall)
_arguments "${_arguments_options[@]}" : \
'--prune[Remove PV-owned state under ~/.pv]' \
'--force[Skip prune confirmation]' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(daemon:enable)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(daemon:disable)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(daemon:restart)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(daemon:run)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(shim:php)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'*::args:_default' \
&& ret=0
;;
(shim:composer)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'*::args:_default' \
&& ret=0
;;
(dns:status)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(dns:install)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(dns:uninstall)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(ports:status)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(ports:install)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(ports:uninstall)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(ca:status)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(ca:trust)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(ca:untrust)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(link)
_arguments "${_arguments_options[@]}" : \
'--hostname=[Primary .test hostname]:hostname:_default' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
'::path -- Project path to link:_default' \
&& ret=0
;;
(unlink)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
'::hostname -- Project hostname to unlink:_default' \
&& ret=0
;;
(open)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
'::hostname -- Project hostname to open:_default' \
&& ret=0
;;
(project:env)
_arguments "${_arguments_options[@]}" : \
'--json[Print generated Project environment values as JSON]' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
'::hostname -- Project hostname to render env for:_default' \
&& ret=0
;;
(list)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(php:use)
_arguments "${_arguments_options[@]}" : \
'-g[Set the global PHP default]' \
'--global[Set the global PHP default]' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
':track -- PHP track to use:_default' \
&& ret=0
;;
(php:install)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
'::track -- PHP track to install:_default' \
&& ret=0
;;
(php:update)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(php:uninstall)
_arguments "${_arguments_options[@]}" : \
'--prune[Remove PV-owned runtime data for the track]' \
'--force[Remove the track even if Projects use it]' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
':track -- PHP track to uninstall:_default' \
&& ret=0
;;
(php:list)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(composer:install)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(composer:update)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(composer:uninstall)
_arguments "${_arguments_options[@]}" : \
'--prune[Remove PV-owned Composer home/cache]' \
'--force[Remove Composer even if in use]' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(mailpit:install)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
'::track -- Mailpit track to install:_default' \
&& ret=0
;;
(mailpit:update)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(mailpit:uninstall)
_arguments "${_arguments_options[@]}" : \
'--prune[Remove PV-owned runtime data for the track]' \
'--force[Remove the track even if Projects use it]' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
':track -- Mailpit track to uninstall:_default' \
&& ret=0
;;
(mailpit:list)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(mailpit:open)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(mail:install)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
'::track -- Mailpit track to install:_default' \
&& ret=0
;;
(mail:update)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(mail:uninstall)
_arguments "${_arguments_options[@]}" : \
'--prune[Remove PV-owned runtime data for the track]' \
'--force[Remove the track even if Projects use it]' \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
':track -- Mailpit track to uninstall:_default' \
&& ret=0
;;
(mail:list)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(mail:open)
_arguments "${_arguments_options[@]}" : \
'--no-color[Disable colored output]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
        esac
    ;;
esac
}

(( $+functions[_pv_commands] )) ||
_pv_commands() {
    local commands; commands=(
'env:Print shell integration code' \
'completions:Generate shell completions' \
'setup:Configure PV system integrations' \
'uninstall:Uninstall PV safely' \
'daemon:enable:Enable the PV login daemon' \
'daemon:disable:Disable the PV login daemon' \
'daemon:restart:Restart the PV login daemon' \
'daemon:run:Run the internal PV daemon' \
'shim:php:Run the internal PV PHP shim' \
'shim:composer:Run the internal PV Composer shim' \
'dns:status:Show PV .test resolver status' \
'dns:install:Install or repair PV .test resolver config' \
'dns:uninstall:Remove PV .test resolver config' \
'ports:status:Show PV pf redirect status' \
'ports:install:Install or repair PV pf redirects' \
'ports:uninstall:Remove PV pf redirects' \
'ca:status:Show PV local CA trust status' \
'ca:trust:Trust PV local CA in the System keychain' \
'ca:untrust:Remove PV local CA trust' \
'link:Link a Project' \
'unlink:Unlink a Project' \
'open:Open a linked Project' \
'project:env:Print generated Project environment values' \
'list:List linked Projects' \
'php:use:Set the PHP track' \
'php:install:Install a PHP track' \
'php:update:Update installed PHP tracks' \
'php:uninstall:Uninstall a PHP track' \
'php:list:List installed PHP tracks' \
'composer:install:Install Composer track 2' \
'composer:update:Update Composer track 2' \
'composer:uninstall:Uninstall Composer' \
'mailpit:install:Install a Mailpit track' \
'mailpit:update:Update installed Mailpit tracks' \
'mailpit:uninstall:Uninstall a Mailpit track' \
'mailpit:list:List installed Mailpit tracks' \
'mailpit:open:Open the running Mailpit dashboard' \
'mail:install:Install a Mailpit track' \
'mail:update:Update installed Mailpit tracks' \
'mail:uninstall:Uninstall a Mailpit track' \
'mail:list:List installed Mailpit tracks' \
'mail:open:Open the running Mailpit dashboard' \
    )
    _describe -t commands 'pv commands' commands "$@"
}
(( $+functions[_pv__subcmd__ca:status_commands] )) ||
_pv__subcmd__ca:status_commands() {
    local commands; commands=()
    _describe -t commands 'pv ca:status commands' commands "$@"
}
(( $+functions[_pv__subcmd__ca:trust_commands] )) ||
_pv__subcmd__ca:trust_commands() {
    local commands; commands=()
    _describe -t commands 'pv ca:trust commands' commands "$@"
}
(( $+functions[_pv__subcmd__ca:untrust_commands] )) ||
_pv__subcmd__ca:untrust_commands() {
    local commands; commands=()
    _describe -t commands 'pv ca:untrust commands' commands "$@"
}
(( $+functions[_pv__subcmd__completions_commands] )) ||
_pv__subcmd__completions_commands() {
    local commands; commands=()
    _describe -t commands 'pv completions commands' commands "$@"
}
(( $+functions[_pv__subcmd__composer:install_commands] )) ||
_pv__subcmd__composer:install_commands() {
    local commands; commands=()
    _describe -t commands 'pv composer:install commands' commands "$@"
}
(( $+functions[_pv__subcmd__composer:uninstall_commands] )) ||
_pv__subcmd__composer:uninstall_commands() {
    local commands; commands=()
    _describe -t commands 'pv composer:uninstall commands' commands "$@"
}
(( $+functions[_pv__subcmd__composer:update_commands] )) ||
_pv__subcmd__composer:update_commands() {
    local commands; commands=()
    _describe -t commands 'pv composer:update commands' commands "$@"
}
(( $+functions[_pv__subcmd__daemon:disable_commands] )) ||
_pv__subcmd__daemon:disable_commands() {
    local commands; commands=()
    _describe -t commands 'pv daemon:disable commands' commands "$@"
}
(( $+functions[_pv__subcmd__daemon:enable_commands] )) ||
_pv__subcmd__daemon:enable_commands() {
    local commands; commands=()
    _describe -t commands 'pv daemon:enable commands' commands "$@"
}
(( $+functions[_pv__subcmd__daemon:restart_commands] )) ||
_pv__subcmd__daemon:restart_commands() {
    local commands; commands=()
    _describe -t commands 'pv daemon:restart commands' commands "$@"
}
(( $+functions[_pv__subcmd__daemon:run_commands] )) ||
_pv__subcmd__daemon:run_commands() {
    local commands; commands=()
    _describe -t commands 'pv daemon:run commands' commands "$@"
}
(( $+functions[_pv__subcmd__dns:install_commands] )) ||
_pv__subcmd__dns:install_commands() {
    local commands; commands=()
    _describe -t commands 'pv dns:install commands' commands "$@"
}
(( $+functions[_pv__subcmd__dns:status_commands] )) ||
_pv__subcmd__dns:status_commands() {
    local commands; commands=()
    _describe -t commands 'pv dns:status commands' commands "$@"
}
(( $+functions[_pv__subcmd__dns:uninstall_commands] )) ||
_pv__subcmd__dns:uninstall_commands() {
    local commands; commands=()
    _describe -t commands 'pv dns:uninstall commands' commands "$@"
}
(( $+functions[_pv__subcmd__env_commands] )) ||
_pv__subcmd__env_commands() {
    local commands; commands=()
    _describe -t commands 'pv env commands' commands "$@"
}
(( $+functions[_pv__subcmd__link_commands] )) ||
_pv__subcmd__link_commands() {
    local commands; commands=()
    _describe -t commands 'pv link commands' commands "$@"
}
(( $+functions[_pv__subcmd__list_commands] )) ||
_pv__subcmd__list_commands() {
    local commands; commands=()
    _describe -t commands 'pv list commands' commands "$@"
}
(( $+functions[_pv__subcmd__mail:install_commands] )) ||
_pv__subcmd__mail:install_commands() {
    local commands; commands=()
    _describe -t commands 'pv mail:install commands' commands "$@"
}
(( $+functions[_pv__subcmd__mail:list_commands] )) ||
_pv__subcmd__mail:list_commands() {
    local commands; commands=()
    _describe -t commands 'pv mail:list commands' commands "$@"
}
(( $+functions[_pv__subcmd__mail:open_commands] )) ||
_pv__subcmd__mail:open_commands() {
    local commands; commands=()
    _describe -t commands 'pv mail:open commands' commands "$@"
}
(( $+functions[_pv__subcmd__mail:uninstall_commands] )) ||
_pv__subcmd__mail:uninstall_commands() {
    local commands; commands=()
    _describe -t commands 'pv mail:uninstall commands' commands "$@"
}
(( $+functions[_pv__subcmd__mail:update_commands] )) ||
_pv__subcmd__mail:update_commands() {
    local commands; commands=()
    _describe -t commands 'pv mail:update commands' commands "$@"
}
(( $+functions[_pv__subcmd__mailpit:install_commands] )) ||
_pv__subcmd__mailpit:install_commands() {
    local commands; commands=()
    _describe -t commands 'pv mailpit:install commands' commands "$@"
}
(( $+functions[_pv__subcmd__mailpit:list_commands] )) ||
_pv__subcmd__mailpit:list_commands() {
    local commands; commands=()
    _describe -t commands 'pv mailpit:list commands' commands "$@"
}
(( $+functions[_pv__subcmd__mailpit:open_commands] )) ||
_pv__subcmd__mailpit:open_commands() {
    local commands; commands=()
    _describe -t commands 'pv mailpit:open commands' commands "$@"
}
(( $+functions[_pv__subcmd__mailpit:uninstall_commands] )) ||
_pv__subcmd__mailpit:uninstall_commands() {
    local commands; commands=()
    _describe -t commands 'pv mailpit:uninstall commands' commands "$@"
}
(( $+functions[_pv__subcmd__mailpit:update_commands] )) ||
_pv__subcmd__mailpit:update_commands() {
    local commands; commands=()
    _describe -t commands 'pv mailpit:update commands' commands "$@"
}
(( $+functions[_pv__subcmd__open_commands] )) ||
_pv__subcmd__open_commands() {
    local commands; commands=()
    _describe -t commands 'pv open commands' commands "$@"
}
(( $+functions[_pv__subcmd__php:install_commands] )) ||
_pv__subcmd__php:install_commands() {
    local commands; commands=()
    _describe -t commands 'pv php:install commands' commands "$@"
}
(( $+functions[_pv__subcmd__php:list_commands] )) ||
_pv__subcmd__php:list_commands() {
    local commands; commands=()
    _describe -t commands 'pv php:list commands' commands "$@"
}
(( $+functions[_pv__subcmd__php:uninstall_commands] )) ||
_pv__subcmd__php:uninstall_commands() {
    local commands; commands=()
    _describe -t commands 'pv php:uninstall commands' commands "$@"
}
(( $+functions[_pv__subcmd__php:update_commands] )) ||
_pv__subcmd__php:update_commands() {
    local commands; commands=()
    _describe -t commands 'pv php:update commands' commands "$@"
}
(( $+functions[_pv__subcmd__php:use_commands] )) ||
_pv__subcmd__php:use_commands() {
    local commands; commands=()
    _describe -t commands 'pv php:use commands' commands "$@"
}
(( $+functions[_pv__subcmd__ports:install_commands] )) ||
_pv__subcmd__ports:install_commands() {
    local commands; commands=()
    _describe -t commands 'pv ports:install commands' commands "$@"
}
(( $+functions[_pv__subcmd__ports:status_commands] )) ||
_pv__subcmd__ports:status_commands() {
    local commands; commands=()
    _describe -t commands 'pv ports:status commands' commands "$@"
}
(( $+functions[_pv__subcmd__ports:uninstall_commands] )) ||
_pv__subcmd__ports:uninstall_commands() {
    local commands; commands=()
    _describe -t commands 'pv ports:uninstall commands' commands "$@"
}
(( $+functions[_pv__subcmd__project:env_commands] )) ||
_pv__subcmd__project:env_commands() {
    local commands; commands=()
    _describe -t commands 'pv project:env commands' commands "$@"
}
(( $+functions[_pv__subcmd__setup_commands] )) ||
_pv__subcmd__setup_commands() {
    local commands; commands=()
    _describe -t commands 'pv setup commands' commands "$@"
}
(( $+functions[_pv__subcmd__shim:composer_commands] )) ||
_pv__subcmd__shim:composer_commands() {
    local commands; commands=()
    _describe -t commands 'pv shim:composer commands' commands "$@"
}
(( $+functions[_pv__subcmd__shim:php_commands] )) ||
_pv__subcmd__shim:php_commands() {
    local commands; commands=()
    _describe -t commands 'pv shim:php commands' commands "$@"
}
(( $+functions[_pv__subcmd__uninstall_commands] )) ||
_pv__subcmd__uninstall_commands() {
    local commands; commands=()
    _describe -t commands 'pv uninstall commands' commands "$@"
}
(( $+functions[_pv__subcmd__unlink_commands] )) ||
_pv__subcmd__unlink_commands() {
    local commands; commands=()
    _describe -t commands 'pv unlink commands' commands "$@"
}

if [ "$funcstack[1]" = "_pv" ]; then
    _pv "$@"
else
    compdef _pv pv
fi
