it/snapshots/cli__completions_reject_unsupported_shells.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        2,
    ),
    stdout: "",
    stderr: "error: invalid value 'tcsh' for '<SHELL>'\n  [possible values: bash, fish, zsh]\n\n  tip: a similar value exists: 'zsh'\n\nFor more information, try '--help'.\n",
}
