it/snapshots/cli__core_workflow_command_help_is_documented.snap
---
source: it/cli.rs
expression: output
---
[
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Configure PV system integrations\n\nUsage: pv setup [OPTIONS]\n\nOptions:\n      --no-color         Disable colored output\n      --yes              Accept PV-owned setup confirmations\n      --non-interactive  Disable interactive prompts\n      --no-path          Skip shell profile integration\n  -h, --help             Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Uninstall PV safely\n\nUsage: pv uninstall [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n      --prune     Remove PV-owned state under ~/.pv\n      --force     Skip prune confirmation\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Initialize Project config\n\nUsage: pv init [OPTIONS] [path]\n\nArguments:\n  [path]  Project path to initialize\n\nOptions:\n      --no-color  Disable colored output\n      --yes       Write detected config without prompting\n      --print     Print generated Project config without writing\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Link a Project\n\nUsage: pv link [OPTIONS] [path]\n\nArguments:\n  [path]  Project path to link\n\nOptions:\n      --hostname <hostname>  Primary .test hostname\n      --no-color             Disable colored output\n  -h, --help                 Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Unlink a Project\n\nUsage: pv unlink [OPTIONS] [project]\n\nArguments:\n  [project]  Project slug or hostname to unlink\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Open a linked Project\n\nUsage: pv open [OPTIONS] [project]\n\nArguments:\n  [project]  Project slug or hostname to open\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Print generated Project environment values\n\nUsage: pv project:env [OPTIONS] [project]\n\nArguments:\n  [project]  Project slug or hostname to render env for\n\nOptions:\n      --json      Print generated Project environment values as JSON\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
]
