it/snapshots/cli__daemon_lifecycle_commands_are_documented_without_running_them.snap
---
source: it/cli.rs
expression: output
---
[
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Enable the PV login daemon\n\nUsage: pv daemon:enable [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Disable the PV login daemon\n\nUsage: pv daemon:disable [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Restart the PV login daemon\n\nUsage: pv daemon:restart [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
]
