it/snapshots/cli__daemon_lifecycle_commands_are_routed_as_stubs.snap
---
source: it/cli.rs
expression: output
---
[
    CommandOutput {
        code: Some(
            1,
        ),
        stdout: "",
        stderr: "error: daemon:enable is routed, but LaunchAgent lifecycle management starts after PV-055\n",
    },
    CommandOutput {
        code: Some(
            1,
        ),
        stdout: "",
        stderr: "error: daemon:disable is routed, but LaunchAgent lifecycle management starts after PV-055\n",
    },
    CommandOutput {
        code: Some(
            1,
        ),
        stdout: "",
        stderr: "error: daemon:restart is routed, but LaunchAgent lifecycle management starts after PV-055\n",
    },
]
