it/snapshots/cli__daemon_run_is_hidden_from_top_level_help.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        0,
    ),
    stdout: "Laravel-first local desired-state control plane\n\nUsage: pv [OPTIONS] <COMMAND>\n\nCommands:\n  env                 Print shell integration code\n  completions         Generate shell completions\n  setup               Configure PV system integrations\n  uninstall           Uninstall PV safely\n  daemon:enable       Enable the PV login daemon\n  daemon:disable      Disable the PV login daemon\n  daemon:restart      Restart the PV login daemon\n  dns:status          Show PV .test resolver status\n  dns:install         Install or repair PV .test resolver config\n  dns:uninstall       Remove PV .test resolver config\n  ports:status        Show PV pf redirect status\n  ports:install       Install or repair PV pf redirects\n  ports:uninstall     Remove PV pf redirects\n  ca:status           Show PV local CA trust status\n  ca:trust            Trust PV local CA in the System keychain\n  ca:untrust          Remove PV local CA trust\n  link                Link a Project\n  init                Initialize Project config\n  unlink              Unlink a Project\n  open                Open a linked Project\n  project:env         Print generated Project environment values\n  status              Show whole-system PV status\n  logs                Show PV logs\n  doctor              Run read-only PV diagnostics\n  jobs                List recent daemon jobs\n  update              Update PV or preview available updates with --check\n  list                List linked Projects\n  php:use             Set the PHP track\n  php:install         Install a PHP track\n  php:update          Update installed PHP tracks\n  php:uninstall       Uninstall a PHP track\n  php:list            List installed PHP tracks\n  composer:install    Install Composer track 2\n  composer:update     Update Composer track 2\n  composer:uninstall  Uninstall Composer\n  mailpit:install     Install a Mailpit track\n  mailpit:update      Update installed Mailpit tracks\n  mailpit:uninstall   Uninstall a Mailpit track\n  mailpit:list        List installed Mailpit tracks\n  mailpit:open        Open the running Mailpit dashboard\n  mail:install        Install a Mailpit track\n  mail:update         Update installed Mailpit tracks\n  mail:uninstall      Uninstall a Mailpit track\n  mail:list           List installed Mailpit tracks\n  mail:open           Open the running Mailpit dashboard\n  redis:install       Install a Redis track\n  redis:update        Update installed Redis tracks\n  redis:uninstall     Uninstall a Redis track\n  redis:list          List installed Redis tracks\n  rustfs:install      Install a RustFS track\n  rustfs:update       Update installed RustFS tracks\n  rustfs:uninstall    Uninstall a RustFS track\n  rustfs:list         List installed RustFS tracks\n  rustfs:open         Open the running RustFS console\n  s3:install          Install a RustFS track (S3 alias)\n  s3:update           Update installed RustFS tracks (S3 alias)\n  s3:uninstall        Uninstall a RustFS track (S3 alias)\n  s3:list             List installed RustFS tracks (S3 alias)\n  s3:open             Open the running RustFS console (S3 alias)\n  mysql:install       Install a MySQL track\n  mysql:update        Update installed MySQL tracks\n  mysql:uninstall     Uninstall a MySQL track\n  mysql:list          List installed MySQL tracks\n  mysql:import        Import a MySQL SQL dump into a linked Project\n  postgres:install    Install a Postgres track\n  postgres:update     Update installed Postgres tracks\n  postgres:uninstall  Uninstall a Postgres track\n  postgres:list       List installed Postgres tracks\n  pg:install          Install a Postgres track\n  pg:update           Update installed Postgres tracks\n  pg:uninstall        Uninstall a Postgres track\n  pg:list             List installed Postgres tracks\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n  -V, --version   Print version\n",
    stderr: "",
}
