it/snapshots/cli__diagnostic_commands_are_documented.snap
---
source: it/cli.rs
expression: output
---
[
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Show whole-system PV status\n\nUsage: pv status [OPTIONS]\n\nOptions:\n      --json      Print whole-system status as JSON\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Show PV logs\n\nUsage: pv logs [OPTIONS]\n\nOptions:\n  -n, --lines <LINES>       Number of recent lines to show [default: 100]\n      --no-color            Disable colored output\n  -f, --follow              Stream new log lines after the initial tail\n      --all                 Include every PV-owned log stream\n      --gateway             Show Gateway logs\n      --worker <php-track>  Show logs for a PHP worker track\n      --resource <name>     Show logs for a Managed Resource\n      --track <track>       Managed Resource track for --resource\n  -h, --help                Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Run read-only PV diagnostics\n\nUsage: pv doctor [OPTIONS]\n\nOptions:\n      --json      Print diagnostics as JSON\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "List recent daemon jobs\n\nUsage: pv jobs [OPTIONS]\n\nOptions:\n      --json      Print recent daemon jobs as JSON\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Update PV or preview available updates with --check\n\nUsage: pv update [OPTIONS]\n\nOptions:\n      --check     Check for updates without applying them\n      --no-color  Disable colored output\n      --json      Print update check output as JSON\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "List linked Projects\n\nUsage: pv list [OPTIONS]\n\nOptions:\n      --json      Print command output as JSON\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
]
