it/snapshots/cli__env_rejects_unsupported_shells.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        2,
    ),
    stdout: "",
    stderr: "error: invalid value 'tcsh' for '--shell <SHELL>'\n  [possible values: bash, fish, zsh]\n\n  tip: a similar value exists: 'zsh'\n\nFor more information, try '--help'.\n",
}
