it/snapshots/cli__env_reports_missing_detected_shell.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        1,
    ),
    stdout: "",
    stderr: "error: could not detect the current shell; pass --shell zsh, --shell bash, or --shell fish\n",
}
